--- a/package.json
+++ b/package.json
@@ -10,18 +10,27 @@
   },
   "dependencies": {
     "@kinde-oss/kinde-auth-nextjs": "^2.2.13",
+    "@prisma/client": "^5.15.0",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-progress": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@uploadthing/react": "^6.6.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.383.0",
     "next": "14.2.3",
+    "prisma": "^5.15.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "sharp": "^0.32.6",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "uploadthing": "^6.12.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
